# llm-automation

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  architecture_test.md  architecture_v2.md  pyproject.toml  sample.env  구현계획.md
docs/: P00_설계서.md  P00_요구사항.md  P00_테스트결과서.md  P01_설계서.md  P01_요구사항.md  P04_설계서.md  P04_요구사항.md  P04_테스트결과서.md  P05_설계서.md  P05_요구사항.md  P05_테스트결과서.md  P06_설계서.md  P06_요구사항.md  P06_테스트결과서.md
docs/templates/: 설계서.md  요구사항정의서.md  테스트결과서.md
e2e/: Makefile  README.md  pyproject.toml
e2e/docs/: 설계서.md  요구사항.md  테스트결과서.md
e2e/fixtures/scenario_A/: trigger.json
e2e/fixtures/scenario_A/before/: README.md
e2e/fixtures/scenario_A/before/src/main/java/com/example/: Calculator.java
e2e/fixtures/scenario_A/expected/: assertions.json
e2e/fixtures/scenario_B/case-001/: trigger.json
e2e/fixtures/scenario_B/case-001/expected/: report.schema.json
e2e/tests/: conftest.py  test_emit_trigger.py  test_fixtures.py  test_scenario_a.py  test_scenario_b.py
infra/: docker-stack.test.yml  sample.env
infra/scripts/: init-swarm.sh  reset.sh  up.sh
libs/_template/: Dockerfile  Makefile  README.md  pyproject.toml
libs/_template/docs/: 설계서.md  요구사항.md  테스트결과서.md
libs/_template/src/_template/: __init__.py  greeter.py  settings.py
libs/_template/tests/: conftest.py  test_greeter.py  test_settings.py
libs/agent-runner/: Dockerfile  Makefile  README.md  pyproject.toml  sample.env
libs/agent-runner/docs/: 설계서.md  요구사항.md  테스트결과서.md
libs/agent-runner/src/agent_runner/: __init__.py  _subprocess.py  claude_code_runner.py  errors.py  factory.py  models.py  opencode_runner.py  protocols.py  settings.py
libs/agent-runner/tests/: conftest.py  test_claude_code_runner.py  test_errors.py  test_factory.py  test_models.py  test_opencode_runner.py  test_public_api.py  test_settings.py  test_subprocess.py
libs/llm-gateway/: Dockerfile  Makefile  README.md  pyproject.toml
libs/llm-gateway/docs/: 설계서.md  요구사항.md  테스트결과서.md
libs/llm-gateway/src/llm_gateway/: __init__.py  aliases.py  errors.py  gateway.py  models.py  openai_backend.py  protocols.py  retry.py  settings.py
libs/llm-gateway/tests/: conftest.py  test_aliases.py  test_errors.py  test_gateway.py  test_openai_backend.py  test_public_api.py  test_retry.py  test_settings.py
libs/trigger-core/: Dockerfile  Makefile  README.md  pyproject.toml
libs/trigger-core/docs/: 설계서.md  요구사항.md  테스트결과서.md
libs/trigger-core/src/trigger_core/: __init__.py  celery_dispatch.py  dedup.py  errors.py  hmac_verify.py  mock.py  models.py  protocols.py  routing.py  webhook.py
libs/trigger-core/tests/: conftest.py  test_celery_dispatch.py  test_dedup.py  test_errors.py  test_hmac_verify.py  test_mock.py  test_models.py  test_public_api.py  test_routing.py  test_webhook.py
services/celery-comment/: Dockerfile  Makefile  README.md  pyproject.toml  sample.env
services/celery-comment/docs/: 설계서.md  요구사항.md  테스트결과서.md
services/celery-comment/src/celery_comment/: __init__.py  app.py  direct_llm_agent.py  factory.py  fixture_git.py  git_ops.py  models.py  prompt.py  protocols.py  settings.py  task.py  worker.py
services/celery-comment/tests/: conftest.py  test_app.py  test_direct_llm_agent.py  test_factory.py  test_fixture_git.py  test_git_ops.py  test_models.py  test_prompt.py  test_protocols.py  test_public_api.py  test_settings.py  test_task.py
services/celery-configaudit/: Dockerfile  Makefile  README.md  pyproject.toml  sample.env
services/celery-configaudit/docs/: 설계서.md  요구사항.md  테스트결과서.md
services/celery-configaudit/src/celery_configaudit/: __init__.py  agent_loop.py  app.py  llm_client.py  mcp_client.py  models.py  protocols.py  report_writer.py  settings.py  task.py  worker.py
services/celery-configaudit/tests/: conftest.py  test_agent_loop.py  test_llm_client.py  test_mcp_client.py  test_models.py  test_protocols.py  test_public_api.py  test_report_writer.py  test_settings.py  test_task.py
services/configaudit-mcp/: Dockerfile  Makefile  README.md  pyproject.toml  sample.env
services/configaudit-mcp/docs/: 설계서.md  요구사항.md  테스트결과서.md
services/configaudit-mcp/tests/: conftest.py  test_analyzer.py  test_anomaly_detector.py  test_app.py  test_config_fetcher.py  (+5 more)
services/flask-webhook/: Dockerfile  Makefile  README.md  pyproject.toml  sample.env
services/flask-webhook/docs/: 설계서.md  요구사항.md  테스트결과서.md
services/flask-webhook/src/flask_webhook/: __init__.py  app.py  dedup.py  hmac_verify.py  models.py  router.py  settings.py
services/flask-webhook/tests/: conftest.py  test_app.py  test_dedup.py  test_hmac_verify.py  test_models.py  test_public_api.py  test_router.py  test_settings.py
services/leebalso-mock/: Dockerfile  Makefile  README.md  pyproject.toml  sample.env
services/leebalso-mock/docs/: 설계서.md  요구사항.md  테스트결과서.md
services/leebalso-mock/fixtures/case-001/: dev.after.httpm  dev.before.httpm  prod.after.httpm  prod.before.httpm  stage.after.httpm  stage.before.httpm
services/leebalso-mock/src/leebalso_mock/: __init__.py  app.py  loader.py  models.py  settings.py
services/leebalso-mock/tests/: conftest.py  test_app.py  test_loader.py  test_models.py  test_public_api.py  test_settings.py
services/rag-mcp/: Dockerfile  Makefile  README.md  pyproject.toml  sample.env
services/rag-mcp/docs/: 설계서.md  요구사항.md  테스트결과서.md
services/rag-mcp/src/rag_mcp/: __init__.py  app.py  models.py  protocols.py  qdrant_reader.py  search_engine.py  settings.py
services/rag-mcp/tests/: conftest.py  test_app.py  test_models.py  test_protocols.py  test_public_api.py  test_qdrant_reader.py  test_search_engine.py  test_settings.py
services/rag-seeder/: Dockerfile  Makefile  README.md  pyproject.toml  sample.env
services/rag-seeder/docs/: 설계서.md  요구사항.md  테스트결과서.md
services/rag-seeder/src/rag_seeder/: __init__.py  cli.py  corpus_loader.py  models.py  protocols.py  qdrant_store.py  seeder.py  settings.py
services/rag-seeder/tests/: conftest.py  test_cli.py  test_corpus_loader.py  test_models.py  test_protocols.py  test_public_api.py  test_qdrant_store.py  test_seeder.py  test_settings.py
(+9 files in other folders)
