[project]
name = "llm-automation"
version = "0.0.0"
description = "LLM 워크플로우 자동화 — 테스트 환경 모노레포"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["libs/*"]
# 후속 phase 마다 추가:
# members = ["libs/*", "services/*"]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
]

# ─── 공통 도구 설정 (모든 워크스페이스 멤버가 상속) ─────────────

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["dist", "build", ".venv"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "S",   # flake8-bandit (보안)
  "N",   # pep8-naming
  "SIM", # flake8-simplify
]
ignore = [
  "E501",  # 줄길이는 formatter 가 처리
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]  # assert 사용 허용 (workspace 중첩 경로 지원)
"**/conftest.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
parallel = true

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
