[project]
name = "e2e"
version = "0.1.0"
description = "Phase 6 E2E — fixture 기반 시나리오 harness"
requires-python = ">=3.12"
dependencies = [
    "trigger-core",
    "celery>=5.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "jsonschema>=4.22",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
trigger-core = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "e2e: requires full docker stack + OpenAI key (skipped by default)",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"bin/*" = ["S603", "S607"]
