[project]
name = "seed-template"
version = "0.0.1"
description = "표준 검증용 reference 모듈 (Phase 0). 운영 코드 아님."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/_template"]
