[project]
name = "celery-comment"
version = "0.1.0"
description = "comment_queue 소비 → AgentRunner 실행 → 주석 commit/push"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery[redis]>=5.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/celery_comment"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "S105", "S106", "S108", "S603", "S607", "SIM117"]
"**/conftest.py" = ["S101", "S105", "S106"]
"**/git_ops.py" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = false
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]
