[project]
name = "flask-webhook"
version = "0.1.0"
description = "Gitea webhook 수신 → HMAC 검증 → work_type 라우팅 → Celery task 발행"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.0",
  "celery[redis]>=5.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "trigger-core",
]

[tool.uv.sources]
trigger-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flask_webhook"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "S105", "S106"]
"**/conftest.py" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]
